tests/fixtures/type-errors/unknown-variable.weir
;; This file should fail type checking:
;; 'x' is not defined
(defn main ()
  (+ x 1))
